# kinsun

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  progress.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
data/rag/: demo_seed.jsonl
docs/: 危急偵測與誤報處理設計.md  對話安全與資料正確性-待議.md  帳號綁定與知情同意設計.md  知識圖譜拆解決策.md  長輩看護系統架構-分層版.drawio
docs/archive/: README.md
docs/rag/: architecture.md  data-source-schema.md  evaluation-plan.md  health-education-policy.md  source-validation.md
docs/superpowers/plans/: 2026-06-28-端到端語音薄切片.md  2026-06-29-CareAgent工具呼叫.md  2026-06-29-db存取深模組.md  2026-06-29-mem0新演算法對齊與清死設定.md  2026-06-29-主動關懷.md  2026-06-29-入站事件正規化.md  2026-06-29-危急偵測核心.md  2026-06-29-危急真實家屬通知.md  (+27 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  medicationSlots.ts  report.ts
kinsun/: agent.py  config.py
services/asr/: README.md  requirements.txt  server.py
services/tts/: README.md  requirements.txt  server.py
src/kinsun/: __init__.py  agent.py  app.py  config.py  db.py  llm.py  mem0_factory.py  pipeline.py  recall.py
tests/: fakes.py  test_accounts_models.py  test_accounts_repository.py  test_accounts_service.py  test_agent.py  test_api_accounts.py  test_api_appointments.py  test_api_elders.py  test_api_health_report.py  test_api_medications.py  test_appointment_facts.py  test_appointment_flow.py  test_appointment_jobs.py  test_appointment_service.py  test_appointment_store.py  test_appointments_facts.py  test_appointments_flow.py  test_appointments_jobs.py  test_appointments_service.py  test_appointments_store.py  test_asr.py  test_audio_publisher.py  test_binding_flow.py  test_binding_gate.py  test_binding_session.py  test_channels_inbound.py  test_config.py  test_database.py  test_db.py  test_episodic_batch.py  test_episodic_embeddings.py  test_episodic_extractor.py  test_episodic_recall.py  test_episodic_store.py  test_fanout.py  test_inbound.py  test_knowledge_batch.py  test_knowledge_extractor.py  test_knowledge_facts.py  test_knowledge_recall.py  (+51 more)
tests/rag/: test_chunker.py  test_crawler.py  test_embeddings.py  test_ingestion.py  test_retriever_and_answer_policy.py  test_service_and_tool.py  test_source_validator.py  test_vector_store.py
(+148 files in other folders)
