[project]
name = "kinsun"
version = "0.1.0"
description = "聽懂國台語的長輩 AI 語音陪伴守護 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "line-bot-sdk>=3",
    "mem0ai>=2.0.10",
    "neo4j>=6.2.0",
    "psycopg[binary]>=3.3.4",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

# 本專案為應用程式（非套件），不需被建置安裝；uv 只負責管理依賴與虛擬環境。

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort(import 排序),
# B: bugbear(常見陷阱), UP: pyupgrade(語法現代化)
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
# 採 src layout：把 src 加入匯入路徑，讓測試可直接 import kinsun（本專案非套件、不安裝）。
# 加入專案根目錄，讓測試可 import tests.fakes（共用測試替身）。
pythonpath = ["src", "."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
